[package]
name = "openmls-sled-storage"
authors = ["White Noise Authors"]
version = "0.0.1"
edition = "2021"
description = "A Sled storage backend for OpenMLS implementing openmls_traits."
license = "MIT"
documentation = "https://docs.rs/openmls-sled-storage"
repository = "https://github.com/erskingardner/openmls-sled-storage"
homepage = "https://github.com/erskingardner/openmls-sled-storage"
readme = "README.md"
keywords = ["openmls", "sled", "storage"]
exclude = [".github/", "tests/", "Cargo.lock", ".gitignore"]

[dependencies]
openmls_traits = { version = "0.3", git = "https://github.com/openmls/openmls", rev = "e2fc5e1" }
sled = "0.34"
thiserror = "1.0"
serde_json = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
hex = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
